--- a/newsletter/2023-01-29.md
+++ b/newsletter/2023-01-29.md
@@ -1,7 +1,7 @@
 # Big Tech is shrinking. Good.
 ## #Web3Weekly: Jan. 22-28, 2023
 
-![An 800-pound gorilla at a laptoop](//w3w.news/img/illos/800lb-final.jpg)
+![An 800-pound gorilla at a laptoop](https://w3w.news/img/illos/800lb-final.jpg)
 *"800 Pounds of Connectivity" by Peter A. McKay × DALL·E*
 
 **Tech's 800-pound gorillas** have seen mostly dismal headlines lately:
