Copyedits here to shorten things up.

--- a/newsletter/2023-01-29.md
+++ b/newsletter/2023-01-29.md
@@ -1,47 +1,51 @@
 # Big Tech is shrinking. Good.
 ## #Web3Weekly: Jan. 22-28, 2023
 
-![An 800-pound gorilla at a laptoop](https://w3w.news/img/illos/800lb-final.jpg)
+![An 800-pound gorilla at a laptoop]("https://w3w.news/img/illos/800lb-final.jpg")
 *"800 Pounds of Connectivity" by Peter A. McKay × DALL·E*
 
-**Tech's 800-pound gorillas** have seen mostly dismal headlines lately:
+**The headlines have been mostly dismal lately** for tech's 800-pound gorillas:
 
-- **Google** is [laying off staff](https://www.cnbc.com/2023/01/21/google-employees-scramble-for-answers-after-layoffs-hit-long-tenured.html) and [fending off a new antitrust suit](https://www.cnet.com/tech/feds-vs-google-what-dojs-antitrust-lawsuit-means-for-online-ads/) from U.S. regulators over its practices in the ad market.
+- **Google** is [laying off staff](https://www.cnbc.com/2023/01/21/google-employees-scramble-for-answers-after-layoffs-hit-long-tenured.html) and [fighting a new antitrust suit](https://www.cnet.com/tech/feds-vs-google-what-dojs-antitrust-lawsuit-means-for-online-ads/) from U.S. regulators over its advertising practices.
 
-- **Meta** is facing formidable new competition from Apple, which now plans to [launch a headset](https://www.msn.com/en-us/news/technology/apples-arvr-headset-what-to-expect-in-2023/ar-BB14pstE) for metaverse apps. Of course, this might also be read as a problem *for Apple,* considering [how disastrously](https://www.fool.com/investing/2023/01/10/what-name-meta-platforms-stock-down-since-change/) the "pivot" to a metaverse strategy has gone so far for the company formerly known as Facebook. Maybe Apple really has  figured out something Meta hasn't about this product category. Or maybe, to borrow an expression, it's just a dog that won't hunt.
 
-- **An anti-hate speech group** filed a [lawsuit against Twitter](https://techcrunch.com/2023/01/25/elon-musk-twitter-antisemitic-hate-speech-lawsuit-germany) in Germany for lax policing of antisemitic content, including holocaust denial.
+Meta faces strong competition from Apple, which plans to launch a headset for metaverse apps. This may also be seen as a challenge for Apple, given its failed "pivot" to a metaverse strategy as Facebook. It's unclear if Apple has discovered something Meta hasn't, or if it's just a product that won't sell.
 
-- **Microsoft was a rare bright spot** for the week, announcing [decent earnings](https://www.msn.com/en-us/money/companies/microsoft-earnings-beat-expectations-cloud-growth-continues-to-slow/ar-AA16Hsp0) and a [$10 billion investment](https://www.nytimes.com/2023/01/23/business/microsoft-chatgpt-artificial-intelligence.html) in OpenAI. But it has also [announced layoffs](https://www.forbes.com/sites/qai/2023/01/23/what-microsofts-recent-layoffs-mean-for-the-company-and-investors/) recently and suffered during the longer-term tech selloff, down 20% over the last 12 months.
 
-- **Earlier this month, Amazon announced** plans to [lay off 18,000 workers](https://www.marketwatch.com/story/amazon-to-lay-off-more-than-17-000-workers-more-that-originally-expected-11672875239?mod=hp_minor_pos27).
+- **Meta is facing formidable new competition** from Apple, which plans to [launch a headset](https://www.msn.com/en-us/news/technology/apples-arvr-headset-what-to-expect-in-2023/ar-BB14pstE) for metaverse apps. But this might also prove to be a problem for Apple, considering how [disastrously](https://www.fool.com/investing/2023/01/10/what-name-meta-platforms-stock-down-since-change/) the "pivot" to a metaverse strategy has gone for Meta, formerly known as Facebook. Maybe Apple has discovered something Meta hasn't, or maybe this just isn't a product with mass appeal.
 
-- **Big Tech has been leading the broader bear market in stocks.** The Nasdaq 100 Index, which tracks the largest listed tech companies in the U.S., is down 19% over the past 12 months, compared to a 10% decline in the S&P 500.  
+- **An anti-hate group** filed a [lawsuit against Twitter](https://techcrunch.com/2023/01/25/elon-musk-twitter-antisemitic-hate-speech-lawsuit-germany) in Germany for lax policing of antisemitic content, including holocaust denial.
 
-**Why this matters:** If you're keen for decentralized tech to become a mass phenomenon, the developments above represent big opportunities. Frankly, Big Tech dominates the average user's daily experience of the internet and computing in general right now. But if such companies are being cut down to size, either by market forces or regulators or both, that could create much-needed openings for other platforms and companies to break through.
+- **Microsoft was a rare positive**, announcing [decent earnings](https://www.msn.com/en-us/money/companies/microsoft-earnings-beat-expectations-cloud-growth-continues-to-slow/ar-AA16Hsp0) and a [$10 billion investment](https://www.nytimes.com/2023/01/23/business/microsoft-chatgpt-artificial-intelligence.html) in OpenAI. However, it has also [announced layoffs](https://www.forbes.com/sites/qai/2023/01/23/what-microsofts-recent-layoffs-mean-for-the-company-and-investors/) and suffered during the longer tech bear market, down 20% in the past 12 months.
 
-People aren't going to stop using the internet, after all. And some of these laid off workers will do startups of their own. So there is hope yet.
+- **Amazon is still implementing** its previously announced [layoff of 18,000 workers](https://www.marketwatch.com/story/amazon-to-lay-off-more-than-17-000-workers-more-that-originally-expected-11672875239?mod=hp_minor_pos27).
+
+- **Big Tech has lead the broader decline in stocks.** The Nasdaq 100 Index, which tracks the largest U.S. tech companies, is down 19% in the past 12 months, compared to a 10% decline in the S&P 500.  
+
+**Why this matters:** If you're keen for decentralized tech becoming mainstream, these developments represent opportunity. Frankly, Big Tech dominates the average user's daily experience of the internet and computing in general. But if such companies are being cut down to size, either by market forces or regulators, it could create openings for other platforms and companies to emerge.
 
 The week's other notable headlines:
 
-- **Bitcoin is on track** for its best January since 2013, up about 40% so far, according to [CoinDesk](https://www.coindesk.com/markets/2023/01/27/bitcoins-best-start-since-2020-led-by-bullish-us-trading-hours/).
+- **Bitcoin is on pace** for its best January since 2013, up about 40% so far, according to [CoinDesk](https://www.coindesk.com/markets/2023/01/27/bitcoins-best-start-since-2020-led-by-bullish-us-trading-hours/).
 
-- **Founder Vitalik Buterin** proposed a system of ["stealth addresses"](https://vitalik.ca/general/2023/01/20/stealth.html) to enhance the Ethereum network's privacy protections.
+- **Founder Vitalik Buterin** proposed a system of ["stealth addresses"](https://vitalik.ca/general/2023/01/20/stealth.html) to improve the Ethereum network's privacy.
 
-- **More than 80% of Uniswap community members** favor deploying the popular decentralized finance protocol [on BNB Chain](https://cointelegraph.com/news/uniswap-holders-ditch-ethereum-for-bnb-pos-chain-to-deploy-v3-protocol), giving users additional options outside the current Ethereum version.
+- **Over 80% of Uniswap community members** favor deploying the popular decentralized finance protocol [on BNB Chain](https://cointelegraph.com/news/uniswap-holders-ditch-ethereum-for-bnb-pos-chain-to-deploy-v3-protocol), giving users an alternative to the Ethereum version.
 
-- **U.S. authorities** announced they have [infiltrated and dismantled](https://decrypt.co/120105/doj-fbi-hive-network-ransomware-infiltration) the Hive ransomware network. It had previously extracted more than $100 million in crypto payments from victims, according to the Justice Department.
+- **U.S. authorities** announced they have [infiltrated and dismantled](https://decrypt.co/120105/doj-fbi-hive-network-ransomware-infiltration) the Hive ransomware network. It extracted more than $100 million in crypto payments from victims, the Justice Department said.
 
-- **Cointelegraph interviewed** interviewed Glassnode analyst James Check about the [basics and best practices](https://www.youtube.com/watch?v=F0qH0zWLh4o) for securing your crypto in 2023. Handy!
+- **Glassnode analyst James Check** discussed the best practices for securing crypto in 2023 in an [interview with Cointelegraph](https://www.youtube.com/watch?v=F0qH0zWLh4o).
 
-- **CoinDesk's content chief Mike Casey** says he noticed a certain aversion to the word "crypto" at the World Economic Forum's Davos conference. He says companies in the industry are increasingly trying to [re-brand away from it](https://www.coindesk.com/layer2/2023/01/20/bad-vibes-from-the-word-crypto-have-some-calling-for-a-rebrand/) due to bad connotations "crypto" has taken on during the bear market.
+- **CoinDesk's content chief Mike Casey** noticed a certain aversion to the word "crypto" at the World Economic Forum's recent Davos conference. Companies in the industry are increasingly [trying to re-brand](https://www.coindesk.com/layer2/2023/01/20/bad-vibes-from-the-word-crypto-have-some-calling-for-a-rebrand/) away from it, due to negative connotations from the bear market, he said.
 
-- **Comic book artist Sean Chen**, who previously illustrated stories about Iron Man, the Avengers, Spider-Man, and others, is launching a new NFT-driven comic line. Chen hailed web3 as a "paradigm shift" for creators in an [interview with Decrypt](https://decrypt.co/119971/marvel-iron-man-artist-sean-chen-web3-paradigm-shift-comic-creators).
+- **Comic book artist Sean Chen**, known for illustrating Iron Man, the Avengers, Spider-Man, and more, is launching a new NFT-driven comic line. Chen called web3 a "paradigm shift" for creators in an [interview with Decrypt](https://decrypt.co/119971/marvel-iron-man-artist-sean-chen-web3-paradigm-shift-comic-creators).
 
-- **The YouTube channel Star Wars Theory** queried ChatGPT to see how it would [fix certain storylines](https://youtu.be/bU3k9MiLIvc) in Disney-era content about the galaxy far, far away that have divided fans. Verdict: This might be the droid we're looking for.
+- **YouTube channel Star Wars Theory** queried ChatGPT about [fixing Disney-era storylines](https://youtu.be/bU3k9MiLIvc) that have divided fans. Verdict: This might be the droid we're looking for.
 
-_**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
+_**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, [join our email list](https://w3w.news).**_
 
 _**Note: This content is for journalistic purposes only, not as investment advice. Always [DYOR](https://www.urbandictionary.com/define.php?term=DYOR) and consult appropriate financial professionals before making investment decisions.**_
 
 _**Best wishes for a healthy and productive week ahead.**_  
+
+_**-- Peter A. McKay**_  
