Replacing art + major edits to copy

--- a/newsletter/2023-02-05.md
+++ b/newsletter/2023-02-05.md
@@ -1,8 +1,8 @@
 # Our love-hate for AI is strong
 ## #Web3Weekly: Jan. 29 to Feb. 4, 2023
 
-![Impressionist painting of a tortoise and hare watching a TV show about bitcoin](https://w3w.news/img/illos/bitcoinandchill-final.jpg)
-*"Bitcoin and Chill" by Peter A. McKay × DALL·E*
+![Drawing of a person and a female robot who feel ambivalent about each other. Digital art.](https://w3w.news/img/illos/facetoface-final.jpg)
+*"Face to Face" by Peter A. McKay × DALL·E*
 
 **It is difficult to tell** which is growing faster right now, consumers' use of artificial intelligence apps or the number of articles about AI's potential pitfalls.
 
@@ -24,25 +24,25 @@ The week's other notable headlines:
 
 - **Crypto markets roared in January.** Bitcoin gained almost 40%, its biggest monthly increase [since October 2021](https://finance.yahoo.com/news/weekly-market-wrap-bitcoin-breaches-132927384.html). Ether rose 33%, helped by [growing network activity](https://bitcoinist.com/ethereum-usage-skyrockets-eth-hits-two-month-high/) and [shrinking supply](https://www.theblock.co/post/207871/ether-supply-reaches-all-time-low-after-the-merge?utm_source=rss&utm_medium=rss). Investors' appetite for risky assets like crypto and stocks grew in January thanks to improved U.S. economic data and a smaller interest-rate hike by the Federal Reserve than at the bank's late-2022 policy meetings.
 
-- Big quarterly loss at Meta: https://www.theblock.co/post/207779/metas-metaverse-losses-hit-4-3-billion-in-fourth-quarter-of-2022?utm_source=rss&utm_medium=rss | https://www.coindesk.com/business/2023/02/01/facebook-parent-metas-metaverse-division-lost-137b-in-2022/?utm_medium=referral&utm_source=rss&utm_campaign=headlines | Meta's earnings out Wednesday: Losses on metaverse approaching 14B. Ouch. https://www.theblock.co/post/206819/nearing-14-billion-metas-2022-metaverse-losses-piling-up?utm_source=rss&utm_medium=rss
+- **Meta reported** an annual loss of [nearly $14 billion](https://www.theblock.co/post/207779/metas-metaverse-losses-hit-4-3-billion-in-fourth-quarter-of-2022) in its metaverse division in 2022 and forecast losses of about $10 billion a year for the foreseeable future. Yikes.
 
 - **Amazon Web Services** is expanding [its web3 team](https://www.coindesk.com/business/2023/02/02/amazon-web-services-hiring-to-pump-its-web3-clientele/). Hmmm...
 
 - **MetaMask** rolled out [updated privacy features](https://www.theblock.co/post/208058/metamask-rolls-out-updates-to-privacy-settings-for-new-and-existing-users) for all users.
 
-- **More crypto layoffs:** Protocol Labs <!-- https://www.coindesk.com/business/2023/02/03/filecoin-parent-company-protocol-labs-cuts-21-of-staff/ --> Chainalysis <!-- Chainalysis is laying off staff. https://decrypt.co/120423/chainalysis-says-its-well-capitalized-latest-workforce-cut --> Despite the market gains, the industry is still cutting jobs. https://bitcoinist.com/crypto-industry-cuts-jobs-despite-bitcoin-highs/
+- **More crypto layoffs:** Filecoin developer [Protocol Labs](https://www.coindesk.com/business/2023/02/03/filecoin-parent-company-protocol-labs-cuts-21-of-staff/) and the research firm [Chainalysis](https://decrypt.co/120423/chainalysis-says-its-well-capitalized-latest-workforce-cut) are among the latest companies announcing job cuts. Industrywide, nearly 8,000 crypto employees lost their jobs in January despite the token market's rally, according to [Bitcoinist](https://bitcoinist.com/crypto-industry-cuts-jobs-despite-bitcoin-highs/).
 
-- **Strike is expanding** Lightning Network access in the Philippines to [enable fast, cheap remittances](https://www.coindesk.com/tech/2023/01/31/strike-expands-lightning-powered-remittances-to-philippines/) in bitcoin. The Phillipines is one of the world's largest markets for such transfers from friends and family overseas, with more than $12 billion in annual activity, according to CoinDesk.
+- **Strike is expanding** Lightning Network access in the Philippines to [enable fast, cheap remittances](https://www.coindesk.com/tech/2023/01/31/strike-expands-lightning-powered-remittances-to-philippines/) denominated in bitcoin. The Phillipines is one of the world's largest markets for such transfers from friends and family overseas, with more than $12 billion in annual activity, according to CoinDesk.
 
-- Binance has partnered with Mastercard to launch a prepaid rewards card in Brazil that enables Binance users to buy items and pay bills with bitcoin and other cryptocurrencies through Mastercard's 90 million merchants. The card offers up to 8% cashback in crypto for eligible purchases, zero fee ATM withdrawals and the option to pay in 14 currencies, including Bitcoin, Ethereum and Binance’s BNB and BUSD tokens. Payments will be converted from crypto to fiat in real time, with a 0.9% conversion fee. The card will be available in the coming weeks, making Brazil the second Latin American country to offer it. (https://decrypt.co/120212/binance-mastercard-launch-bitcoin-rewards-card-brazil)
+- **Binance has partnered with Mastercard** to launch a [prepaid rewards card](https://decrypt.co/120212/binance-mastercard-launch-bitcoin-rewards-card-brazil) in Brazil.
 
 - **Coinbase paused** new offerings from artists on its marketplace for non-fungible tokens, which has [struggled](https://fortune.com/crypto/2023/02/02/coinbase-halts-nft-artist-drops/) to attract trading activity. Coinbase says it is [not shutting down](https://twitter.com/Coinbase_NFT/status/1620863083198705665?s=20) the project, however.
 
-- Kin Foundation is launching a new Solana on-ramp for developers. https://www.theblock.co/post/207056/kin-foundation-debuts-solana-based-on-ramp-tool-for-app-developers?utm_source=rss&utm_medium=rss | Can Solana still kill Ethereum? <!-- https://www.youtube.com/watch?v=3jRajWtIdLc --> | - Everlend, a Solana-based decentralized finance protocol, shut down. <!-- https://decrypt.co/120419/solana-based-defi-protocol-everlend-announces-shut-down -->
+- **Kin Foundation is launching** a new Solana on-ramp [for developers](https://www.theblock.co/post/207056/kin-foundation-debuts-solana-based-on-ramp-tool-for-app-developers?utm_source=rss&utm_medium=rss). But on a less promising note for the ecosystem, the Solana-based decentralized finance protocol Everlend [shut down](https://decrypt.co/120419/solana-based-defi-protocol-everlend-announces-shut-down).
 
-- **How to concentrate like it's 1990:** Gloria Mark, a professor of informatics at the University of California, Irvine, found that in 2012, office workers spent an average of 75 seconds on a task before switching. In her book "Attention Span: A Groundbreaking Way to Restore Balance, Happiness and Productivity", she explains that digital devices such as smartphones and computers are largely to blame for the disruption to our attention. Notifications are one major source of distraction, but only account for half of the interruptions in focus. The other half are prompted by an internal motivation to switch tasks and Dr. Mark found that these urges to self-distract are caused by stress.(https://www.nytimes.com/2023/01/09/well/mind/concentration-focus-distraction.html)
+- **The New York Times offered** handy tips on ["how to concentrate like it's 1990."](https://www.nytimes.com/2023/01/09/well/mind/concentration-focus-distraction.html) You know, before we were all beseiged with smartphones, notifications, and dopamine-inducing social algorithms.
 
-- Introducing Catecoin... <!-- https://catecoin.club/ -->
+- **Dogecoin has a new rival among meme tokens.** Its name is... wait for it... [Catecoin](https://finance.yahoo.com/news/catecoin-launching-rise-cats-play-210800749.html). Because of course. 
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
