Final copy for 5 Feb 2023

--- a/newsletter/2023-02-05.md
+++ b/newsletter/2023-02-05.md
@@ -4,21 +4,23 @@
 ![Drawing of a person and a female robot who feel ambivalent about each other. Digital art.](https://w3w.news/img/illos/facetoface-final.jpg)
 *"Face to Face" by Peter A. McKay × DALL·E*
 
-**It is difficult to tell** which is growing faster right now, consumers' use of artificial intelligence apps or the number of articles about AI's potential pitfalls.
+**It is unclear which is growing faster,** consumers' use of artificial intelligence apps or the number of articles about AI's potential pitfalls.
 
-ChatGPT, the popular bot made by Open AI, just topped 100 million monthly active users two months after launching. Analysts say that's the [fastest path](https://www.reuters.com/technology/chatgpt-sets-record-fastest-growing-user-base-analyst-note-2023-02-01/) to that milestone of any app in history.
+OpenAI's popular ChatGPT bot just hit [100 million monthly active users](https://www.reuters.com/technology/chatgpt-sets-record-fastest-growing-user-base-analyst-note-2023-02-01/) two months after its launch, making it the fastest app ever to reach that milestone.
 
-At the same time, fretful articles like [this one](https://www.technologyreview.com/2023/01/31/1067436/could-chatgpt-do-my-job/) from the MIT Technology Review have become a cottage industry undo themselves. The headline says it all:
+At the same time, there's a growing number of fretful articles about AI, like [this one](https://www.technologyreview.com/2023/01/31/1067436/could-chatgpt-do-my-job/) from the MIT Technology Review whose headline nearly says it all:
 
 *"Could ChatGPT do my job?"*
 
-Along similar lines, Wired covered [artists' complaints](https://www.wired.com/story/how-to-spot-generative-ai-art-according-to-artists/) that visual AI tools like Midourney and DALL-E don't give explicit credit to the creators whose prior works the software effectively mimics. And OpenAI itself now offers a tool to help educators to [spot ChatGPT-powered cheating](https://www.entrepreneur.com/business-news/openai-rolls-out-new-tool-to-combat-chatgpt-plagiarism/444096) on writing assignments.
+Wired has also reported on [artists' complaints](https://www.wired.com/story/how-to-spot-generative-ai-art-according-to-artists/) about visual AI tools like Midourney and DALL-E not giving proper credit to creators.. And OpenAI itself has even released a tool to help educators detect [ChatGPT-assisted cheating](https://www.entrepreneur.com/business-news/openai-rolls-out-new-tool-to-combat-chatgpt-plagiarism/444096) on writing assignments.
 
-Optimistically, I'd like to think this all signals that we've collectively learned an important lesson over time -- that it's important to ask tough questions *early* in the adoption of a new technology before unintended consequences get out of hand. We didn't do that with social media, and look how that turned out.
+Speaking optimistically, perhaps this all signals that we've learned to ask tough questions about new technologies early on to avoid unintended consequences. We didn't do that with algorithmic advertising or social media, and look how those things turned out.
 
 On the other hand, it could be AI is just an exception. Maybe we have been conditioned to worry about it in particular through decades of sci-fi movies about murderous AIs.
 
-There's even one such movie in theaters now that's been a [runaway hit](https://www.cinemablend.com/movies/box-office/avatar-the-way-of-water-tops-the-weekend-box-office-again-but-the-real-story-is-m3gan-blowing-past-predictions). A sequel is already [in the works](https://www.rollingstone.com/tv-movies/tv-movie-news/m3gan-2-0-sequel-2025-1234663375/), tentatively titled M3GAN 2.0.
+There's even one such movie in theaters now that's been a [runaway hit](https://www.cinemablend.com/movies/box-office/avatar-the-way-of-water-tops-the-weekend-box-office-again-but-the-real-story-is-m3gan-blowing-past-predictions), about a children's toy named M3GAN run amok.
+
+A sequel is already [in the works](https://www.rollingstone.com/tv-movies/tv-movie-news/m3gan-2-0-sequel-2025-1234663375/).
 
 The week's other notable headlines:
 
@@ -42,7 +44,7 @@ The week's other notable headlines:
 
 - **The New York Times offered** handy tips on ["how to concentrate like it's 1990."](https://www.nytimes.com/2023/01/09/well/mind/concentration-focus-distraction.html) You know, before we were all beseiged with smartphones, notifications, and dopamine-inducing social algorithms.
 
-- **Dogecoin has a new rival among meme tokens.** Its name is... wait for it... [Catecoin](https://finance.yahoo.com/news/catecoin-launching-rise-cats-play-210800749.html). Because of course. 
+- **Dogecoin has a new rival among meme tokens.** Its name is... wait for it... [Catecoin](https://finance.yahoo.com/news/catecoin-launching-rise-cats-play-210800749.html). Because of course.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to receive updates like this in your inbox every Sunday, please [join our email list](https://w3w.news).**_
 
