Adding lede item for 12 Feb

--- a/newsletter/2023-02-12.md
+++ b/newsletter/2023-02-12.md
@@ -1,10 +1,22 @@
-# Growth rocks.
+# How to support this newsletter
 ## #Web3Weekly: Feb. 5-11, 2023
 
 ![Impressionist painting of a tortoise and hare watching a TV show about bitcoin](https://w3w.news/img/illos/bitcoinandchill-final.jpg)
 *"Bitcoin and Chill" by Peter A. McKay × DALL·E*
 
-<!-- User CTA on sponsorships, donations. -->
+**I've been thinking** about ways to make the newsletter more sustainable, while maintaining my goal to make info about decentralization accessible for newbie and [OG](https://www.merriam-webster.com/dictionary/OG) alike. A quick note here about two options if you'd like to help.
+
+Most important, I'm looking for new sponsors. If your organization has an event to promote to the #Web3Weekly community, [as TechCrunch did](https://mailchi.mp/7321a83e16e1/web3-weekly-20274504) in late 2022, that's a great option. Or if it's some other product or service, that's cool too. Please drop me an email at peter@w3w.media, and we'll talk more.   
+
+For individuals, below are a few crypto addresses where you can send donations, if that's of interest:
+
+- **Bitcoin:** 3DWyDijmAm2o7k1bPQfTER1gK1JwnkcMEe
+- **Ether (or any ERC20 token):** 0x2618bb798D7D7F12737dC47089355dd7Bab6F52D
+- **Telos (EVM):** 0x4a6bd10b6d608c4891a58f48163ecc67775c2f13
+
+Finally, thank you to everyone who has subscribed to the newsletter so far. I've always viewed this newsletter as a document of my own trip down the proverbial rabbit hole of learning about decentralization, piece by piece. It's always a pleasure and an honor to have friends along for the ride. ☺️
+
+On to the latest headlines: 
 
 The week's notable headlines:
 
