Final coy for 12 Feb 2023

--- a/newsletter/2023-02-12.md
+++ b/newsletter/2023-02-12.md
@@ -4,37 +4,35 @@
 ![Impressionist painting of a tortoise and hare watching a TV show about bitcoin](https://w3w.news/img/illos/bitcoinandchill-final.jpg)
 *"Bitcoin and Chill" by Peter A. McKay × DALL·E*
 
-**I've been thinking** about ways to make the newsletter more sustainable, while maintaining my goal to make info about decentralization accessible for newbie and [OG](https://www.merriam-webster.com/dictionary/OG) alike. A quick note here about two options if you'd like to help.
+**I've been thinking** about ways to make the newsletter more sustainable while still making info about decentralization accessible for newbie and [OG](https://www.merriam-webster.com/dictionary/OG) alike. If you would like to help, I have two opptions for you.
 
-Most important, I'm looking for new sponsors. If your organization has an event to promote to the #Web3Weekly community, [as TechCrunch did](https://mailchi.mp/7321a83e16e1/web3-weekly-20274504) in late 2022, that's a great option. Or if it's some other product or service, that's cool too. Please drop me an email at peter@w3w.media, and we'll talk more.   
+First, I'm looking for new sponsors. If your organization has an event to promote to the #Web3Weekly community, [as TechCrunch did](https://mailchi.mp/7321a83e16e1/web3-weekly-20274504) last year, that's a great option. Or if it's some other product or service, that's cool too. Please drop me an email at peter@w3w.media, and we'll talk further.   
 
-For individuals, below are a few crypto addresses where you can send donations, if that's of interest:
+For individuals, if you're interested in making a donation, you can use the following crypto addresses:
 
 - **Bitcoin:** 3DWyDijmAm2o7k1bPQfTER1gK1JwnkcMEe
 - **Ether (or any ERC20 token):** 0x2618bb798D7D7F12737dC47089355dd7Bab6F52D
 - **Telos (EVM):** 0x4a6bd10b6d608c4891a58f48163ecc67775c2f13
 
-Finally, thank you to everyone who has subscribed to the newsletter so far. I've always viewed this newsletter as a document of my own trip down the proverbial rabbit hole of learning about decentralization, piece by piece. It's always a pleasure and an honor to have friends along for the ride. ☺️
+Here I also want to thank everyone who has subscribed to the newsletter. I've always viewed it as a document of my own trip down the proverbial rabbit hole of learning about decentralization, bit by bit. It's truly a pleasure and an honor to have friends along for the ride. ☺️
 
-On to the latest headlines: 
+Now, onto the latest headlines:
 
-The week's notable headlines:
+- **Kraken will end staking for U.S. customers** and [pay a $30 million fine](https://www.cnbc.com/2023/02/09/crypto-exchange-kraken-settles-with-sec-over-us-staking-operation.html) to settle allegations by the Securities and Exchange Commission that it was offering unregistered securities. The deal could set a precedent for [other crypto exchanges](https://www.theblock.co/post/210587/kraken-crypto-industry-on-notice-gensler) as U.S. regulators increasingly seek to apply existing law to the industry.
 
-- **Kraken will end staking for U.S. customers** and [pay a $30 million fine](https://www.cnbc.com/2023/02/09/crypto-exchange-kraken-settles-with-sec-over-us-staking-operation.html) to settle allegations by the Securities and Exchange Commission that it was offering unregistered securities. The deal could set a precedent that will affect [other crypto exchanges](https://www.theblock.co/post/210587/kraken-crypto-industry-on-notice-gensler) as U.S. regulators increasingly look for areas where they can apply existing law to the industry.
+- **Genesis filed a plan** in U.S. bankruptcy court to [repay its largest creditors](https://www.yahoo.com/now/bankrupt-genesis-unveils-plan-pay-231004755.html), including provisions to enable customers of its partner, Gemini, to [recover $900 million](https://decrypt.co/121100/bankrupt-genesis-plan-pay-creditors).
 
-- **Genesis filed a plan** in U.S. bankruptcy court to [repay its biggest creditors](https://www.yahoo.com/now/bankrupt-genesis-unveils-plan-pay-231004755.html), including provisions to enable customers of its partner Gemini to [recoup $900 million](https://decrypt.co/121100/bankrupt-genesis-plan-pay-creditors).
+- **PayPal held $604 million** in crypto on behalf of users as of year-end 2022, according to its latest [annual report](https://d18rn0p25nwr6d.cloudfront.net/CIK-0001633917/b562e712-8266-493c-8ae8-e28f93404d2f.pdf). PayPal CEO Dan Schulman also announced [he will retire](https://www.cnbc.com/2023/02/09/paypal-ceo-dan-schulman-to-leave-at-end-of-2023-company-begins-search-for-successor.html) later this year.
 
-- **PayPal held $604 million** in crypto on behalf of users as of year-end 2022, according to its latest [annual report](https://d18rn0p25nwr6d.cloudfront.net/CIK-0001633917/b562e712-8266-493c-8ae8-e28f93404d2f.pdf). PayPal CEO Dan Schulman also said [he will retire](https://www.cnbc.com/2023/02/09/paypal-ceo-dan-schulman-to-leave-at-end-of-2023-company-begins-search-for-successor.html) later this year.
+- **Research firm Chainalysis** reports that hackers [stole $3.8 billion](https://blog.chainalysis.com/reports/2022-biggest-year-ever-for-crypto-hacking/?ftag=MSFd61514f) from users in 2022, a new record. Chainalysis says much of this activity came from North Korea, which effectively uses crypto theft to raise funds beyond the reach of Western sanctions.
 
-- **The research firm Chainalysis** says hackers [swiped $3.8 billion](https://blog.chainalysis.com/reports/2022-biggest-year-ever-for-crypto-hacking/?ftag=MSFd61514f) from users in 2022, a new record. Much of the activity documented by Chainalysis came from North Korea, which effectively uses crypto theft to raise revenue beyond the reach of Western sanctions.
-
-- **The Uniswap community** completed its final vote to deploy the latest version of their decentralized finance software [on the Binance-led BNB Chain](https://www.theblock.co/post/210570/uniswap-dao-completes-vote-for-proposed-bnb-deployment). CoinDesk notes that the outcome was a [rare setback](https://www.coindesk.com/tech/2023/02/10/uniswap-vote-on-bnb-deployment-ends-with-silicon-valleys-a16z-on-losing-side/) for venture giant Andreesen Horowitz, which cast a large bloc of votes against the deployment.
+- **The Uniswap community** completed its final vote to deploy the latest version of its decentralized finance software [on the Binance-led BNB Chain](https://www.theblock.co/post/210570/uniswap-dao-completes-vote-for-proposed-bnb-deployment). CoinDesk notes that the outcome was a [rare setback](https://www.coindesk.com/tech/2023/02/10/uniswap-vote-on-bnb-deployment-ends-with-silicon-valleys-a16z-on-losing-side/) for venture giant Andreesen Horowitz, which cast a large bloc of votes against the deployment.
 
 - **Emergent Fidelity Technologies,** an offshore company co-founded by Sam Bankman-Fried that holds almost $600 million in Robinhood stock, [filed for bankruptcy](https://www.bloomberg.com/news/articles/2023-02-03/bankman-fried-entity-that-owns-robinhood-stake-goes-bankrupt#xj4y7vzkg) Friday.
 
 - **Wall Street investment firms** still have [big crypto plans](https://decrypt.co/120546/financial-institutions-still-betting-crypto) despite market losses in 2022, Decrypt reports.
 
-- **Google has begun** early user testing for Bard, a chatbot the company is [planning for a wider launch](https://www.zdnet.com/article/chatgpt-has-a-new-rival-googles-bard-chatbot/) soon to [compete with OpenAI's ChatGPT](https://www.cnbc.com/2023/02/08/google-bard-heres-more-of-what-the-chatgpt-competitor-can-do.html).
+- **Google has begun** early user testing for Bard, a chatbot the company is [planning to launch](https://www.zdnet.com/article/chatgpt-has-a-new-rival-googles-bard-chatbot/) soon to [compete with OpenAI's ChatGPT](https://www.cnbc.com/2023/02/08/google-bard-heres-more-of-what-the-chatgpt-competitor-can-do.html).
 
 - **The streaming service Twitch** suspended an AI-generated version of the sitcom Seinfeld for 14 days after it began [broadcasting transphobic jokes](https://www.forbes.com/sites/danidiplacido/2023/02/06/ai-generated-seinfeld-banned-from-twitch-after-making-transphobic-jokes/).
 
